solved problem of overlapping div

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
         background-repeat: no-repeat;
         width: 100%;
         height: 10%;
+        min-height: 70px;
     }
     
     #logo{
@@ -157,6 +158,7 @@
         background-color: white;
         width: 100%;
         height: 80%;
+        min-height: 630px;
     }
     
     .about_us{
@@ -167,6 +169,7 @@
         background-color: white;
         width: 100%;
         height: 40%;
+        min-height: 250px;
         /*background-image: url("svg_smarphone/about_us.svg");*/
         background-image: url("images/about_us.jpg");
         background-repeat: no-repeat;
@@ -200,6 +203,7 @@
         background-color: #DEE6DE;
         width: 100%;
         height: 65%;
+        min-height: 380px;
         overflow: scroll;
         overflow-y: hidden;
         direction: ltr;
@@ -333,13 +337,10 @@
 
 /*-----For tablets: ---------------*/
 @media screen and (min-width: 601px) and (max-width: 900px) {
-
-
     html, body { 
         height: 100%; 
         width: 100%; 
-        margin: 0; 
-        padding: 0;
+        margin: 0;
         overflow-x: hidden;
     }
     
@@ -351,6 +352,7 @@
         justify-content: center;
         width: 100%;
         height: 13%;
+        min-height: 70px;
         background-image: url("svg_tablet/header.svg");
         background-size: auto 100%;
         background-repeat: no-repeat;
@@ -376,11 +378,13 @@
         flex-direction: column;
         width: 100%;
         height: 160%;
+        min-height: 1400px;
     }
     
     .form_left{
         width: 100%;
         height: 85%;
+        min-height: 800px;
         display: flex;
         flex-direction: column;
     }
@@ -388,6 +392,7 @@
     .form_right{
         width: 100%;
         height: 60%;
+        min-height: 600px;
         margin-top: 2%;
         /*background-image: url("svg_smarphone/from_bottom.svg");*/
         background-image: url("images/form_bottom.jpg");
@@ -398,6 +403,7 @@
     
     .form_left_top{
         height: 40%;
+        min-height: 300px;
         /*background-image: url("svg_smarphone/form_top.svg");*/
         background-image: url("images/form_top.png");
         background-repeat: no-repeat;
@@ -415,6 +421,7 @@
         border-top-right-radius: 30px;
         border-top-left-radius: 30px;
         height: 60%;
+        min-height: 500px;
         width: 100%;
     }
 
@@ -487,6 +494,7 @@
         background-color: white;
         width: 100%;
         height: 80%;
+        min-height: 700px;
     }
     
     .about_us{
@@ -497,6 +505,7 @@
         background-color: white;
         width: 100%;
         height: 40%;
+        min-height: 300px;
         background-image: url("svg_smarphone/about_us.svg");
         background-repeat: no-repeat;
         background-position-x: center;
@@ -529,6 +538,7 @@
         background-color: #DEE6DE;
         width: 100%;
         height: 60%;
+        min-height: 400px;
         overflow: scroll;
         overflow-y: hidden;
         direction: ltr;
